webpage is set up with basic introduction and image

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -2,14 +2,19 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Sarah Adebabay Portfolio</title>
+    <title>Sarah Adebabay's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
+      <h1>Sarah Adebabay's Portfolio</h1>
+      <p>Hello, my name is Sarah Adebabay.
+        I am a rising fourth year at the University of California, Berkeley studying Computer Science and Education. 
+        This is my portfolio.</p>
+        <img src="images/IMG_1639.jpeg"/>
+
+
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
