Gallery with photos added

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,33 +27,46 @@
       <a href="https://www.behance.net/gallery/96606277/PenPal">Check out PenPal using this link!</a>
     </div>
 
-    <div class="content">
-    <a target="_blank" href="img_5terre.jpg">
-        <img src="images/IMG_1639.jpeg" alt="Cinque Terre" width="600" height="400">
-    </a>
-    <div class="desc">Add a description of the image here</div>
+    <div id="content">
+        <h1>Photo Gallery</h1>
+        <p>Here is a gallery of photographs that I took on my travels!</p>
     </div>
 
-    <div class="content">
-    <a target="_blank" href="img_forest.jpg">
-        <img src="iimages/IMG_1639.jpeg" alt="Forest" width="600" height="400">
-    </a>
-    <div class="desc">Add a description of the image here</div>
+    <div id="content">
+        <a target="_blank" href="images/IMG_8982.jpg">
+        <img src="images/IMG_8982.jpg" width="600" height="400"></a>
+        <p>Photo 1</p>
     </div>
 
-    <div class="content">
-    <a target="_blank" href="img_lights.jpg">
-        <img src="images/IMG_1639.jpeg" alt="Northern Lights" width="600" height="400">
-    </a>
-    <div class="desc">Add a description of the image here</div>
+    <div id="content">
+        <a target="_blank" href="images/IMG_8809.jpeg">
+        <img src="images/IMG_8809.jpeg" width="600" height="400"></a>
+        <p>Photo 2</p>
     </div>
 
-    <div class="content">
-    <a target="_blank" href="img_mountains.jpg">
-        <img src="images/IMG_1639.jpeg" alt="Mountains" width="600" height="400">
-    </a>
-    <div class="desc">Add a description of the image here</div>
+    <div id="content">
+        <a target="_blank" href="images/IMG_9785.jpg">
+        <img src="images/IMG_9785.jpg" width="600" height="400"></a>
+        <p>Photo 3</p>
     </div>
 
+    <div id="content">
+        <a target="_blank" href="images/IMG_9861.jpg">
+        <img src="images/IMG_9861.jpg" width="600" height="400"></a>
+        <p>Photo 4</p>
+    </div>
+
+    <div id="content">
+        <a target="_blank" href="images/IMG_9920.jpg">
+        <img src="images/IMG_9920.jpg" width="600" height="400"></a>
+        <p>Photo 5</p>
+    </div>
+
+    <div id="content">
+        <a target="_blank" href="images/DSC_0283.jpg">
+        <img src="images/DSC_0283.jpg" width="600" height="400"></a>
+        <p>Photo 6</p>
+    </div>
+    
   </body>
 </html>
