Add GitHub, LinkedIn, and Photo Captions

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,20 +11,19 @@
       <h1>Sarah Adebabay's Portfolio</h1>
       <p>Hello, my name is Sarah Adebabay. I am currently at a rising fourth year undergraduate student at the University of California, Berkeley studying Computer Science and Education. </p>
       <p>Growing up as the eldest daughter of two Ethiopian-American immigrants, I have always seen the world in relation to the people around me. Unconsciously, I consider the well-being of others as I make decisions. Whether it is my family, friends, or strangers, I am always willing to lend a hand to others, and I think it has to do with the values that my parents instilled in me. As young teenagers, my parents fled Ethiopia to build a safer and prosperous life for future generations. Working minimum wage jobs, my parents sacrificed college educations to support me, my sister, and my family in Ethiopia.</p> 
-        <!-- <img src="images/IMG_1639.jpeg"/> -->
+      <p>My parents and their constant sacrifices have influenced me to seize every moment and opportunity. Without them, I wouldn’t be the person I am today that is so eager to make a positive impact in the world. </p>
+      <img src="images/IMG_1639.jpeg" width="650"/>
       <p>Click here to learn a random fact about me:</p>
       <button onclick="addRandomGreeting()">Fun Fact</button>
       <div id="greeting-container"></div>
     </div>
 
     <div id="content">
-      <h1>Past Projects</h1>
-      <h2>Penny</h2>
-      <p>A financial planning app focused on helping youth (middle school to college) create realistic goals for buying products, saving for college, and/or retirement to teach financial literacy at a young age. For example kids can create detailed financial plans for purchasing a car, Xbox, phone, etc. Links with a user's or user's parent's bank account for automatic or manual money transferring into the app to save for a goal. Parent's can monitor their child's account and set up an allowance if wanted. Financial plans update as preferences and details change and goals can be cancelled, returning money as needed. Rewards are given for meeting goals and reaching financial literacy milestones (giftcards, discounts, badges, etc.).</p>
-      <a href="https://github.com/ejsfbu/penny">Check out Penny using this link!</a>
-      <h2>Penpal</h2>
-      <p>With seamless message translation and intelligent conversation guidance built-in, PenPal matches people worldwide for enriching cultural exchanges. PenPal’s mission is to enable users from any part of the world to communicate without the barrier of language. Existing applications lack auto-translate functionality and rely on outdated letter-style interfaces. We want to empower our users to express themselves in their language and allow them to feel comfortable being their authentic selves while making genuine connections. We aim to provide our users with AI real-time translation and message interpretation services to fit their cultural, personal, and professional needs.  </p>
-      <a href="https://www.behance.net/gallery/96606277/PenPal">Check out PenPal using this link!</a>
+      <h1>Let's Connect</h1>
+      <h2>Github</h2>
+      <a href="https://github.com/sarah-adebabay">https://github.com/sarah-adebabay</a>
+      <h2>LinkedIn</h2>
+      <a href="linkedin.com/in/sarah-adebabay">linkedin.com/in/sarah-adebabay</a>
     </div>
 
     <div id="content">
@@ -34,38 +33,38 @@
 
     <div id="content">
         <a target="_blank" href="images/IMG_8982.jpg">
-        <img src="images/IMG_8982.jpg" width="600" height="400"></a>
-        <p>Photo 1</p>
+        <img src="images/IMG_8982.jpg" width="650"></a>
+        <p>Paris, France</p>
     </div>
 
     <div id="content">
         <a target="_blank" href="images/IMG_8809.jpeg">
-        <img src="images/IMG_8809.jpeg" width="600" height="400"></a>
-        <p>Photo 2</p>
+        <img src="images/IMG_8809.jpeg" width="650"></a>
+        <p>Versailles, France</p>
     </div>
 
     <div id="content">
         <a target="_blank" href="images/IMG_9785.jpg">
-        <img src="images/IMG_9785.jpg" width="600" height="400"></a>
-        <p>Photo 3</p>
+        <img src="images/IMG_9785.jpg" width="650"></a>
+        <p>Nice, France</p>
     </div>
 
     <div id="content">
         <a target="_blank" href="images/IMG_9861.jpg">
-        <img src="images/IMG_9861.jpg" width="600" height="400"></a>
-        <p>Photo 4</p>
+        <img src="images/IMG_9861.jpg" width="650"></a>
+        <p>Nice, France</p>
     </div>
 
     <div id="content">
         <a target="_blank" href="images/IMG_9920.jpg">
-        <img src="images/IMG_9920.jpg" width="600" height="400"></a>
-        <p>Photo 5</p>
+        <img src="images/IMG_9920.jpg" width="650"></a>
+        <p>Geneva, Switzerland</p>
     </div>
 
     <div id="content">
         <a target="_blank" href="images/DSC_0283.jpg">
-        <img src="images/DSC_0283.jpg" width="600" height="400"></a>
-        <p>Photo 6</p>
+        <img src="images/DSC_0283.jpg" width="650"></a>
+        <p>Milan, Italy</p>
     </div>
     
   </body>
