--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div id="content">
-        <a target="_blank" href="images/IMG_8982.jpg">
+        <a target="_blank" href="/data">
         <img src="images/IMG_8982.jpg" width="650"></a>
         <p>Paris, France</p>
     </div>
