Fetch functionality shows name on DOM

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,13 +17,16 @@
       <button onclick="addRandomGreeting()">Fun Fact</button>
       <div id="greeting-container"></div>
     </div>
-    
     <div id="content">
       <h1>Let's Connect</h1>
       <h2>Github</h2>
       <a href="https://github.com/sarah-adebabay">https://github.com/sarah-adebabay</a>
       <h2>LinkedIn</h2>
       <a href="linkedin.com/in/sarah-adebabay">linkedin.com/in/sarah-adebabay</a>
+      <h2>Hello</h2>
+      <p>Click here for a fun surprise!</p>
+      <button onclick="getName()">Get it!</button>
+      <div id="name-container"></div>
     </div>
 
     <div id="content">
@@ -32,7 +35,7 @@
     </div>
 
     <div id="content">
-        <a target="_blank" href="/data">
+        <a target="_blank" href="images/IMG_8982.jpg">
         <img src="images/IMG_8982.jpg" width="650"></a>
         <p>Paris, France</p>
     </div>
