Add hardcoded comments onto page

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -27,6 +27,8 @@
       <p>Click here for a fun surprise!</p>
       <button onclick="getName()">Get it!</button>
       <div id="name-container"></div>
+      <button onclick="getComments()">Comment</button>
+      <div id="comments-container"></div>
     </div>
 
     <div id="content">
