Add comment capability

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -31,6 +31,14 @@
       <div id="comments-container"></div>
     </div>
 
+    <form action="/data" method="POST">
+      <p>Leave a comment:</p>
+      <input type="text" name="comment-left">
+      <br/><br/>
+      <input type="submit" value="Submit">
+    </form>
+  </body>
+
     <div id="content">
         <h1>Photo Gallery</h1>
         <p>Here is a gallery of photographs that I took on my travels!</p>
