--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -29,14 +29,13 @@
       <div id="name-container"></div>
       <button onclick="getComments()">Comment</button>
       <div id="comments-container"></div>
-    </div>
-
-    <form action="/data" method="POST">
+      <form action="/data" method="POST">
       <p>Leave a comment:</p>
       <input type="text" name="comment-left">
       <br/><br/>
       <input type="submit" value="Submit">
     </form>
+    </div>
   </body>
 
     <div id="content">
@@ -45,7 +44,7 @@
     </div>
 
     <div id="content">
-        <a target="_blank" href="/_ah/admin.">
+        <a target="_blank" href="images/IMG_8982.jpg">
         <img src="images/IMG_8982.jpg" width="650"></a>
         <p>Paris, France</p>
     </div>
