--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Sarah Adebabay's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtLm5JDm5B3YKrbgoDizm2xIGYBfUDVB4"></script>
     <script src="script.js"></script>
   </head>
-  <body>
+  <body onload="createMap();">
     <div id="content">
       <h1>Sarah Adebabay's Portfolio</h1>
       <p>Hello, my name is Sarah Adebabay. I am currently at a rising fourth year undergraduate student at the University of California, Berkeley studying Computer Science and Education. </p>
@@ -78,6 +79,11 @@
         <img src="images/DSC_0283.jpg" width="650"></a>
         <p>Milan, Italy</p>
     </div>
-    
-  </body>
+
+    <div id="content">
+        <h1>Hello Google Maps</h1>
+        <div id="map"></div>
+        <p>This page shows a Google Map!</p>
+    </div>
+    </body> 
 </html>
