--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,6 +8,13 @@
     <script src="script.js"></script>
   </head>
   <body onload="createMap();">
+    <div class="navbar">
+        <a class="active" href="about.html"><i class="fa fa-fw fa-home"></i>About Me</a> 
+        <a href="experience.html"><i class="fa fa-fw fa-search"></i>Experience</a> 
+        <a href="gallery.html"><i class="fa fa-fw fa-envelope"></i>Gallery</a> 
+        <a href="contact.html"><i class="fa fa-fw fa-user"></i>Contact</a>
+    </div>
+
     <div id="content">
       <h1>Sarah Adebabay's Portfolio</h1>
       <p>Hello, my name is Sarah Adebabay. I am currently at a rising fourth year undergraduate student at the University of California, Berkeley studying Computer Science and Education. </p>
